# feedsbot

./: .gitignore  README.md  README.rst  pylama.ini  pyproject.toml  setup.py
.github/workflows/: python-ci.yml
feedsbot/: __init__.py  hooks.py  orm.py  util.py
requirements/: requirements-dev.txt  requirements.txt
simplebot_feeds/: __init__.py  db.py  subcommands.py  util.py
tests/: test_plugin.py
