[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "feedsbot"
description = "Subscribe to RSS/Atom feeds in Delta Chat"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["deltachat", "bot", "feeds", "rss", "atom"]
authors = [
  {name = "adbenitez", email = "adb@arcanechat.me"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
    "deltabot-cli>=8.1.0,<9.0",
    "SQLAlchemy>=2.0.49,<3.0",
    "feedparser>=6.0.11,<7.0",
    "requests>=2.28.1,<3.0",
    "beautifulsoup4>=4.11.1,<5.0",
    "html5lib>=1.1",
]

[project.urls]
Homepage = "https://github.com/deltachat-bot/feedsbot"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "prospector[with-mypy]",
  "types-requests",
]

[project.scripts]
feedsbot = "feedsbot:main"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm
version_file = "feedsbot/_version.py"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
